# AI-Personal-Finance-Tracker

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml  README.md  init.sql
backend/src/: config.rs  data.rs  main.rs  middleware.rs  response.rs  routes.rs
docs/: 1-可行性研究报告.md  2-项目开发计划.md  3-软件需求说明书.md  4-数据要求说明书.md  5-测试计划.md  6-概要设计说明书.md  7-详细设计说明书.md  8-用户手册.md  9-测试执行日志.md  设计文档.docx  需求文档.docx
frontend/: app.js  index.html  styles.css
需求文档/: 需求文档(1).docx
