[package]
name = "ai-finance-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "chrono", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9"
dotenvy = "0.15"
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
